flux/apps/base/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant-app
        image: "ghcr.io/home-assistant/home-assistant:2023.7"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: null
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
        resources: {}
        livenessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
        volumeMounts:
          - name: config-root
            mountPath: /config
          - name: configuration-yaml
            mountPath: /config/configuration.yaml
            subPath: configuration.yaml
      restartPolicy: Always
      volumes:
        - name: config-root
          persistentVolumeClaim:
            claimName: home-assistant-config-root
        - name: configuration-yaml
          configMap:
            name: configuration-yaml
            items:
            - key: configuration.yaml
              path: configuration.yaml
